--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,37 @@
 * {
   box-sizing: border-box;
 }
+
+h1, p,
+a {
+  margin: 0;
+}
+
+body {
+  /*background: red;*/
+}
+
+.wrap {
+  /*background: gold;*/
+  /*padding: .3em;*/
+}
+
+header {
+  background: blue;
+  height: 5em;
+  padding: .4em;
+  text-align: center;
+}
+
+li {
+  background: gold;
+  padding: 1em;
+}
+
+a {
+  font-size: 1.5em;
+}
+
+p {
+  font-size: .8em;
+}
