Add 'keyup' event on searchInput. When keyup event is activated, callback function will move header to top of page and adjust styling as needed.

--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,9 @@ a {
   margin: 0;
 }
 
-body {
+body, html {
   background: firebrick;
+  /*height: 100vh;*/
 }
 
 .wrap {
@@ -18,7 +19,7 @@ body {
 }
 
 header {
-  background: #F5F5F5;
+  /*background: #F5F5F5;*/
   padding: .5em;
   text-align: center;
   margin-top: 20vh;
@@ -54,7 +55,6 @@ header {
   margin: 0 auto;
 }
 
-
 li {
   background: #B2B2B2;
   padding: 1em;
@@ -71,4 +71,42 @@ a {
 
 p {
   font-size: .8em;
+}
+
+
+/* ========== */
+
+.moveHeaderToTop { /* moves header after 'keup' event */
+  margin-top: 0;
+  background: #F5F5F5;
+  text-align: left;
+
+  font-size: .8em;
+  display: flex;
+  align-items: center;
+}
+
+.displayInlineBlk {
+  display: inline-block;
+}
+
+.fltLeft {
+  /*background: blue;*/
+  /*color: red;*/
+  float: left;
+}
+
+.widthTwenty {
+  width: 20%;
+}
+
+.widthEighty {
+  width: 80%;
+  text-align: center;
+}
+
+.clearfix::after {
+  content: " ";
+  display: table;
+  clear: both;
 }
