--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,9 @@ body, html {
   /*background: gold;*/
   /*padding: .3em;*/
   position: relative;
+  width: 100%;
+  margin: 0 auto;
+  max-width: 1120px;
 }
 
 header {
@@ -25,13 +28,18 @@ header {
   margin-top: 20vh;
 }
 
+a,
 .title {
-  font-size: 3.2em;
   font-family: 'Lora', serif;
 }
 
+.title {
+  font-size: 3.2em;
+}
+
 .title,
-.buttons {
+.buttons,
+p {
   color: #1C1C1C;
 }
 
@@ -74,21 +82,36 @@ header {
 }
 
 li {
-  background: #B2B2B2;
+  background: #E8E8E8;
   padding: 1em;
-  border-top: 1px solid black;
+  /*border-top: 1px solid black;
+  border-bottom: 1px solid black;*/
+  margin-bottom: .5em;
 }
 
 li:last-child {
-  border-bottom: 1px solid black;
+  border-bottom: 0;
 }
 
 a {
-  font-size: 1.5em;
+  font-size: 1.6em;
+  color: #053B69;
+  text-decoration: none;
+  display: inline-block;
+  margin-bottom: .3em;
+}
+
+a:hover {
+  color: #968713;
+  -webkit-transition: all .3s;
+  -moz-transition: all .3s;
+  -o-transition: all .3s;
+  transition: all .3s;
 }
 
 p {
-  font-size: .8em;
+  font-size: .9em;
+  line-height: 1.5;
 }
 
 
