--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,9 @@ a {
 
 body, html {
   background: #F5F5F5;
-  /*height: 100vh;*/
 }
 
 .wrap {
-  /*background: gold;*/
-  /*padding: .3em;*/
   position: relative;
   width: 100%;
   margin: 0 auto;
@@ -26,7 +23,6 @@ body, html {
 }
 
 header {
-  /*background: red;*/
   padding: 1.3em;
   text-align: center;
   margin-top: 20vh;
@@ -63,14 +59,6 @@ p {
   font-size: 1.112em;
 }
 
-.searchInput,
-.searchInput::-webkit-input-placeholder, /* Chrome/Opera/Safari */
-.searchInput::-moz-placeholder, /* Firefox 19+ */
-.searchInput:-ms-input-placeholder, /* IE 10+ */
-.searchInput:-moz-placeholder { /* Firefox 18- */
-  color: black;
-}
-
 .submitBtn,
 .random {
   display: inline-block;
@@ -78,7 +66,6 @@ p {
 
   background: none;
   border: none;
-  /*background: red;*/
   width: 2em;
   height: 2em;
 
@@ -117,12 +104,9 @@ p {
 }
 
 
-/* ========== */
-
-.moveHeaderToTop { /* moves header after 'keup' event */
+/* Styles added after "moveHeader" function is invoked. See app.js */
+.moveHeaderToTop {
   margin-top: 0;
-  /*background: #F5F5F5;*/
-  /*background: firebrick;*/
   text-align: left;
 
   font-size: .8em;
@@ -135,8 +119,6 @@ p {
 }
 
 .fltLeft {
-  /*background: blue;*/
-  /*color: red;*/
   float: left;
 }
 
@@ -152,7 +134,6 @@ p {
 
 .updatedSearchInput {
   text-align: left;
-  /*margin-right: 1em;*/
   max-width:  401.69px;
 }
 
@@ -163,7 +144,7 @@ p {
 }
 
 
-/*Media query*/
+/*=== Media query ===*/
 @media screen and (min-width: 1020px) {
   .title {
     font-size: 4.2em;
