--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,4 @@
 * {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -48,11 +47,13 @@ p {
   background-color: inherit;
   outline: none;
   text-align: center;
+
   margin: 1em 0;
   padding: .3em;
   line-height: 1.2;
-  width: 12.444em;
-  /*199.11px / 16px = 12.444em*/
+
+  width: 12.444em; /*199.11px / 16px = 12.444em*/
+
   font-family: 'Roboto', sans-serif;
   font-size: 1.112em;
 }
@@ -61,10 +62,12 @@ p {
 .random {
   display: inline-block;
   margin: 0 auto;
+
   background: none;
   border: none;
   width: 2em;
   height: 2em;
+
   font-size: 1.4em;
 }
 
@@ -99,18 +102,14 @@ p {
   line-height: 1.5;
 }
 
+
 /* Styles added after "moveHeader" function is invoked. See app.js */
 .moveHeaderToTop {
   margin-top: 0;
   text-align: left;
+
   font-size: .8em;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -134,7 +133,7 @@ p {
 
 .updatedSearchInput {
   text-align: left;
-  max-width: 401.69px;
+  max-width:  401.69px;
 }
 
 .clearfix::after {
@@ -143,11 +142,13 @@ p {
   clear: both;
 }
 
+
 /*=== Media query ===*/
 @media screen and (min-width: 1020px) {
   .title {
     font-size: 4.2em;
   }
+
   .widthTwenty {
     max-width: 100px;
   }
