Give serachInput border radius: 0

--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,8 @@ p {
   /*199.11px / 16px = 12.444em*/
   font-family: 'Roboto', sans-serif;
   font-size: 1.112em;
+  border-radius: 0;
+  -webkit-border-radius: 0;
 }
 
 .submitBtn,
