--- a/scss/style.scss
+++ b/scss/style.scss
@@ -56,6 +56,9 @@ p {
 
   font-family: 'Roboto', sans-serif;
   font-size: 1.112em;
+
+  border-radius: 0;
+  -webkit-border-radius: 0;
 }
 
 .submitBtn,
