Give ALL inputs a 0 border radius

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,11 @@ body, html {
   background: #F5F5F5;
 }
 
+input {
+  border-radius: 0;
+  -webkit-border-radius: 0;
+}
+
 .wrap {
   position: relative;
   width: 100%;
@@ -55,8 +60,6 @@ p {
   /*199.11px / 16px = 12.444em*/
   font-family: 'Roboto', sans-serif;
   font-size: 1.112em;
-  border-radius: 0;
-  -webkit-border-radius: 0;
 }
 
 .submitBtn,
