--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,11 @@ a {
 
 a {
   color: inherit;
+  text-decoration: none;
+}
+
+ul {
+  margin: 0;
 }
 
 body, html {
@@ -32,6 +37,7 @@ header {
   padding: 1.3em;
   text-align: center;
   margin-top: 20vh;
+  min-width: 375px;
 }
 
 .title,
