--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,11 @@ a {
 
 a {
   color: inherit;
+  text-decoration: none;
+}
+
+ul {
+  margin: 0;
 }
 
 body, html {
@@ -31,6 +36,7 @@ header {
   padding: 1.3em;
   text-align: center;
   margin-top: 20vh;
+  min-width: 375px;
 }
 
 .title,
